**** Don't forget to update the version in version.cl ****
**** (please leave this header at the top of the file) ****

2009-02-22  Elliott Johnson <elliott@gemini.franz.com>
v1.18
	* mailstatus.cl: Added a -version arg
	* incfilter.cl: Added a -version arg
	* folderfilter.cl: Added a -version arg

2009-02-22  Elliott Johnson <elliott@gemini.franz.com>
v1.17
	* command-line-options.cl: Abstracted the command line option
		structure and related functions into this file.
	* mailstatus.cl: Cleanups from the above move.
	* incfilter.cl: Updated to use the new clo structure.
	* folderfilter.cl: Update to use the new clo structure.
	
2009-02-14  Elliott Johnson <elliott@gemini.franz.com>
v1.16

	* mailstatus.cl: Added a help menu.  I also added a
		mechanism to register command line options.
	
2009-02-03  Elliott Johnson  <elliott@gemini.franz.com>
v1.15

	* subs.cl: corrected a typo.  to-one-if -> to-one-of

	
2008-12-11  Kevin Layer  <layer@gemini.franz.com>
v1.14

	* mailstatus.cl: add -l (long output), -u (show unread msgs),
          -p (print separators in w/-l) command line arguments
	* subs.cl: new variable: *mailstatus-long-format* 

2008-12-11  Kevin Layer  <layer@gemini.franz.com>

	* mailfilter.spec: add debug_package so the debuginfo package
	  isn't made (don't remember why this was needed but Ahmon
	  told me to do it to get around some problem)

2008-04-05  Kevin Layer  <layer@gemini.franz.com>
v1.13

	* subs.cl: make sure message-is-my-spr-p doesn't return
	  a non-nil value for anything bug sprs.  Don't want bugs/rfes
	  being mis-identified.

2008-01-08  Ahmon Dancy  <dancy@dancy>
v1.12
	* subs.cl: [sa816] Added 'check-for-spr-references' keyword
	arg to message-is-my-spr-p.

2007-12-10  Ahmon Dancy  <dancy@dancy>
v1.11	
	* subs.cl/lincfilter.cl: Added additional debugging and logging
	support.  

	* subs.cl: Added (declare (ignorable #'from-one-of #'to-one-if
			   #'to-one-of-domain #'add-header))